--- a/DPS_Diablo3/Properties/Resources.resx
+++ b/DPS_Diablo3/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\diablo3.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="loading_bar" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\loading_bar.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
