--- a/DPS_Diablo3/dps_diablo.resx
+++ b/DPS_Diablo3/dps_diablo.resx
@@ -240,6 +240,148 @@
   <metadata name="tt_fileload.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>430, 133</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="pb_load.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        R0lGODlhrQALAPQAAP////v7+/f39/Pz8+/v7+rq6ubm5uLi4t7e3tra2tbW1tLS0s7OzsrKysXFxcHB
+        wb29vbm5ubW1tbGxsa2trampqaWlpaCgoJycnJiYmP///wAAAAAAAAAAAAAAAAAAACH/C05FVFNDQVBF
+        Mi4wAwEAAAAh+QQFCAAaACwAAAAArQALAAAF/yAhXdhlkhmmruVpsrD7wqtM0qqN5/Ju36VYzzdkkX67
+        lot4kogkEwnk4XhQKJNsliJxeL2PCVdClnAdjXTDIS6Tz2k0e1yGq8NR9yTiVTuwbmYRanFZgXtod4Zl
+        YnyEVnRvg4QQFXlkWY6Kl1CIDxCgIxEPDAoJCQ1TVVSfCgivCKiqX58LsAgHDRGzVRCut7oPVF5TtrCy
+        X2APv7DBw70KB8e6EMlUzK8O1dYPCbcIDqPPoAnSrwnaydrLt+ijyVPlsQoKFRgQtgYG4A4LDP8NlhUg
+        QLAAuAYM/P3rN5DAwANUGCBcqKDgwIMS/zFwUNGhQ4waN3YkSADiRI3dSP86RIcmoUQHCRp+dOBSI0yV
+        BBI8UAMwpUV0NResQSAz586QARGQLFBggYkGBwY2bbBAwYKrCAsM2DqAgAKqVav+08p1wIJ+9LAyKNtV
+        aNW0VAkI4ErAbVq3BLgKICCRHtwFZffa9dugYtkCEsPSKxyYL1W/QhWwRZzQatXCebcKKJDm6tWvkvVy
+        NsHAQN5cYcNC1SxAwIHKkB0cYO36MeQGBuYOaI0goWcFEnO3novAdloHwoej80tPYoHWuwUU9ywWt+65
+        6KhbbSB3+ABUqYEzeD4XO+yw46PPPfv2qkS9c7+SNk3ZsvsEuzXzLUWd8XXO1GGVQGa7URZgA/iVt1n/
+        Z9TBBJ8BDHrWAAIKbvbPgfjpZQBNByIQGIS+uTchWwaEKKGHrB3AYYMHlLcbahZcUFoBXwX4T3fKgfVZ
+        GjjGpyNWC/Q4QI3U3ThcazXaR5N6gv3oFpNDOomQkIn1B9iRdUkpGZZu/ebfcAREiNWWYPqzgAUVRFOc
+        iUKhuFUAKoZolWy6bYVakbIRKB1CB7ao152ebeRnfuDYyMBsf/IZqHV6ZVdkA89p9p2U49UpAHheQnrd
+        pAdCmh92YFUwSHFOlqJnmE72A91W9fVnmGaIlbolrIp6xlF+u0FIVYgMDCiamGcpsKoAIAbo4HUg2rcR
+        hRrWehVMqw4Qp7GI6jZtNjgiVPDDBWhW4G0FMW77rbfh2tDtt+XKcC65264LbrvjvvuDu+m6QC+849Z7
+        wr3zxhtuBU6EAAAh+QQFCAAaACwAAAAArQALAAAF/6CmYWJ5kWWJoWkrsuJ1uWMr07B2u/merrZZrjfj
+        2Wg1ZIvIy2kml0rKAaFQSpJJJVJyUCsT7IQScYgajsckLMqSS+jHFauhQOCNCIWtcUPMGmhVfH5TEGBi
+        dniDbWuKIg4NVSkSEhQPeBFSbW6AgZJ7KVZcKWMNIggICRCkkBAPCaiqVF1UsCWzd5C2sRoHqqy1f7gI
+        Cg+Yuw8OvRqqGrqQZb2pCs9dz6civ8bIGmYQDb3bENBeZcQK5Nfg08Ua3coR4SkZFtkaBQSr2QwLaAgl
+        ChRQ4IBBCQYMGgAUQYAAwRIL/DlYqIHAwG4aEjo4wNDiAk8a/DXgKCLfR4gaSf/iK3BSRMQGDQx0ZBnJ
+        5YKEKhsy8NTPi8yKHnkmZPBzZcuMIosesKAhwkICAwo0MChCAUFmAwgYmFrCKoMEBEQIiMq1qoJ5IgaQ
+        pWrVG9YBW6lqsKqwhAABBgp2JbhQ7YADDRZ0DaRSLWC51RiQVCvggN65Cj4WJoDg8Vx/i8ciKHt5ZNqs
+        TO+pPdvVH4OwYh0GNosQtYbR97yeLpE1497AqMeqFgy5n2u1CW8zGEA7LGIFvmkXCHRbAfHPnK06WPB8
+        bAGEzZ+/vo7YXzXaBpjabRwb+Ua7f6Njpt34sdWPRTXfC4nTLuX5kWPSHpDggdybDsTHH343xaePe/kt
+        91n/Ave8pJ8Gdw2Ywk1E7ZcASCL9FlYRrwlgHEQfOffZh1VdKGJq0Z2VgHZRYTfFiiIEIAB3ey3z3AAz
+        ciaYQsT1aICL7/EInosh8cVeXF3tdEB1cBF5k5AdHlZagOwBxmFDDKaAHFGoqZVliTC5NpY3wuWTlkNy
+        hTQVAQK8lhVpYDagIXMuIbeAma+hedudJTREZ5FrilVbgwTxdqZtdTaggGsNoQHidNXNSOQBBUh5kGdi
+        kaclAw9QpFZl/0lW3GZp1pdWe10lIOpnlU2YUFFZMRgqpm5e6KoDCuZ5IVULRFahoLKi9CCE/GG4U65v
+        zqeBBeKlcEGzIjBLg7QiVABtIwrQWnutDtRGu+2yKWjrwrMtfEsutkhk+y246I577brqshsCACH5BAUI
+        ABoALAAAAACtAAsAAAX/oKZdGiaeF3meJpquIta6cDmLLyzD+bqvPdZtVLPxVKgfTXcL4pS4IlRjuVQi
+        J4dDQjlJJBMKJOuIVLxgyuPUKFMm3slkLdJGunGKgyw5i8Bye3VbcH+AdBptGngaX3IrbVxogWx7hX+U
+        g2ErgJCWJ3IVficVcwoiCAgLWGQRDSepq2ODEQywqhCIDw4Qr6i4iHu1Jwe4Kw4PwyIHCQu5WRoQtiIJ
+        qhHBydMaqQzPGloP0rfd2MrbCA2s31oQC8QI5FnJviUVEg4JJwQFDIIaDAweNDAgggABA4pELGDQgAFB
+        EQX40WOwoOFDDQe/naDogJ5BhPQWVFxQQB/BiQwZ/5QsaEDLCZEOSBbMGLLfgosFDiRiY1MfgQMdX35T
+        sNLggQY1G5xiMQECgoIDBgDVpiDgxQEEEvhLoGDhRQED0GlrNlDfAK3uNCio6uBq1obUuqoUEfVsg7Rq
+        GbpVQI8rwJUasPLFW3VuYIN8T6xlCDhqYg0L1jYkEPjwYw0JElAEXGKCNgJYASpW4EDBALoHG6bt2iDB
+        abr8tEUufRr0gAJwFX5zjfooRRGnGiB4DRohVdK8A0v1h/nbU4xRfSuu+NygVHpqST/H+JM5a51QpWev
+        eOD1gAoYJAyHellkw5VgC1xebNgy84oNGp+mJ5kB5YISTXfXf9DtBBxf/okQH/9Dow1YGVYVNbgAgaHJ
+        tkBMFAZ4YGv/LchfRQoQSIAFGtBRl3hytfWaAD9pAxlD5dElgHhqXXjVjCGxdlVYDlhYloICINCjYv3o
+        p9loepkXZG6QVWRkjkhRSEB7ha1UF4LAVZTgTCSmNQCL/7x04YQKZnScUgSyiJSYSp3wZWwHVpSAiAYw
+        qJCcShKwpm74QDVAnVQlsl1gxrG5nnIIrbCQA9thRWNwhxYgQKHAJXJAAHSFtYJtpLG55WEJQJmfm1P6
+        I1kDItrFpkwzzYdgYwRc6Ol/UU3p4kiNleSdg8pR9iGv8UV4J5pulsQfX6cIoBxuNZDYrLMnQAuDtBZI
+        G60htdZGO20R1W67AondXssttdlSQe6435YbrgjrpvutHyEAACH5BAUIABoALAAAAACtAAsAAAX/oCaK
+        2GieJKpq5Xm5LPqirTmf9Trm2o3roxdPJYSpeBefzmKhPEwPCcUkmThHDYcVNcU6pJORRDNxeKtUslmU
+        lZ4oZSiZCl9rsltxZexFSSV2DU9hYhSAXoQmeydRbxaJIhISDQkjCQwQTyMOEAwmCJ6MEAsjBweYmiIP
+        owgjoJkmnKQiB6ARsRCjrggNEKKzIrywIw8RCqUHvbEaEMeWDRGpWQ/OGrW9qSLGpQicqWYRoRoU0Q0H
+        IwQGWSYMD+IaBAcPDewOwPAGd/ULBejJ9CMWPLg34BxAEe3uEWh1UIQ9E/H0eakG74AdDQsYOKBYoNvB
+        BQscVEKHYF5AQSNF/yw8kVEkCnMQEzRUoLGfiAEEFFxUANLmAA0DZJqgySAfOp1DGTSwCXSAgpkYCUCk
+        mZQBU5wLZjZgIPUmgYyWEixQwFRDgaxDNXAdIUBqw6wEz76jqaArsZRS1QFLoLOVv5lZD/yEN0Ddu6wI
+        BgPVO4Kng3MjCjZU28CA4oIYhz42MaAbMJ5LOfP6nNWA3YUN9oY0qjLBQxE0Q6skILQxA6snJsi+KRH2
+        VsUECigdmtouvOEBGSxQ3Pa2iZDLIwt/S2mAgBHTiSsA3k9rAubCD1eXvlXzd39qiSeOnE/8+R0TKArg
+        JS52WdqpG5eO3Fnrbg0CXGLCJUtd19pMt10VFNF1DRj3FYK4iRCAU5MpxxQBA6DVmFqXPThgVFNRt4Bx
+        GljQgF/WlaWBYwkYiE96IvBFiQkChKeZX02pM1RIOFYE44qI0WjAXCFBdlMyAyI2mAACJPOOUoKx5aRt
+        DxgJz2iW7BdZjyJoeVMXbHl40lo3FUCVbfyYcNZbyjGXU31PjSidUp/ZY9cABTTwFods9QPnRqdNV99G
+        biKHkD2XDQknJXe29xw1l6VkggUrUDpppSdYioKmInB66aebZoopqKKSaqqnI3iKaqelhjoCORqEAAAh
+        +QQFCAAaACwAAAAArQALAAAF/6Amjhg2atd1kuaYrmK5qqcq17B2u/DVurTaT/SCDVFBom7mMzJzR1QO
+        VtFYJifHQ0PBaiQTimTUaDzCp/BYVH50RZExJUI2v0UTydzBNntFEnp0Ig52J4ETEHUQd1xhgxptVSNj
+        FYp9jH8TmxB8kX6HFJYjhRGTIhQakHAREAojCAkOEVuEDw+vIggIqrUODhAQCbCyEL7AriIHsbO1GrcP
+        wxrLCA+Xz8jSGrEPkL+d0suyzr8PDtq71qTAzruvzhrA58rM1+a0J7HX8WeeI7e5NBQogKCQiAUL4mkr
+        QKDaCQZmtBEoIIvBwQUM5okYmOBBAzK/JBLoeKKBFl4bC/8o8MdggUmUGgiMdGDxYMYDI2SufGgGZ8yJ
+        C2iOcNnAp0ACO0VA/GUUqD8NGR3ANOdgQYGcBSCOUJCggdURAwhoFaFAQYOAGgZkrZkggdkFBESEXbtV
+        AQMFceUWaFBTQ9mzIuISMNByq0u8YOmSNattgFqvhhskyBv2AN+6ksEOMHCZrMLAMjmPaOtSm4QyDQzk
+        bPhRhFuXV0HLqusy788EhckyYKBa7kjIfu02iE3AsdmhdhlclRn2+NbdsX9Gqjs2ZvO+fy0OSDsxUsLg
+        LaPLrJ79xPXvf+ESkVAowXYNAh5/9+sSpuMDVV2/KqqZ8Pz99g3WWVkrGVUZcPTxF9j/AJb1hVBR78V3
+        wAMOBlXAe44hgKBwTbF2QgIu9WZdR9hBRFxxCGAnnIgqRMCAbY5hhNmLYIml4ll5FRdXa8F5FV1YGY1m
+        lgIYqrXbUKW9J9OOhlUFIwFlRBaQAAIo5lck7mF15EGMwcgZdvEcAGNW/2H5ngjB2DdAV/9lJGJxXQW0
+        omYazocRb2AJIAt6c8oGmG5f+WnYbiI6NttifP04Um4PBprWAM5psIBZNOo1nX4+rmbXoOpR8kCgA1TJ
+        Y4JZ/tTgVpHAVNyX1AUoGqpSKUmAZWUy0BSDnSVo4Kz+uOWmZqfaxJ8Aj9I6VJh0CiWseKyViOcUI1hg
+        QQ7TniAtI7XVinAtDNtqm621K3Rr7bfiRhvut+aOi6263J5LbbhTlBsCACH5BAUIABoALAAAAACtAAsA
+        AAX/oCaOIkZq13WO5qiuWuu+pyzS9YmzNrpfmN6uJITFdMCcDhZcGk8TjQUycjgglJFkMqFQRY0GJCqS
+        SCjeaiNi0W4rX004QiFruJP4PCuKbNNga3xlXQ4jYWdkZlwPVQ50JIuGYA4SFW6Mh4aDE4mNlBqDRg+P
+        nxoICAoacYYQDgkiB6mrn1YRDggiqAoQrI8NI7K8plYQDbkawr21vyOoCxGsD8bOqQ/Eq8exCAsQxFcM
+        wdy9VQ8R4dvd3+fOB9CmEQ9taqQHIgQEBQuTGgsLYfbu6ePnr4EDAyPyaSD4r0GBe/n2oWvAwEEDhBAr
+        Hqp4EOJDhhQxaijwEJiIggxE/+YLM4JBRZP3DBgcsaDigocC5RySqFImzDAQaFCsmICAiAEDDjRYIEKB
+        U20aCCCViU6DKgcBNUx1wFRDAljHjEZNunSEgppZkR7gSpPBg7QEEJS1epZBVgFku3qtqXIAAgeq6FZU
+        SSDBXKsuRSKV29UpgwZZ8SXgV7cBDX8MVA3QqrBB4H4Mbo4YQKAmCQVLBQjQOuBh1bOexZIu4NJszc9S
+        CVC0zXUzZwO1m6IuelQAbb2wE+A1uhI5amRjZepl2gDW6AKHz77yTdoA26ZyEMzT4NLuCAGFd5/8l1bA
+        X7OwC3BPT6ImA5ycUZ/+h1/qZPiP4UdaAqGZldhoBKA23f9jYkm1WVWYLSAbafo1VZNoR5UGk2MMSAUR
+        ebYthZ8rr4iFF3Cv7WOdVsap188+ARk1AHDTheebVkrVCNloSTmAjmMXnUfAAQWeFJ5sAuTYFlY8KmXb
+        Y2n5dVhNO47lHj8vOsSjXABWWcV9CSW4oQKhCajhkwrcmA+ZNO2DoQboPUaCTSTkI6eRmXHXmmk0xXZd
+        cFmmeVRrgIYDmFhRAQdTQStKVYCPNC204lRF9iMpogsxudpiMIEWZIbvtRRgmIYhxxepkJ5kUH+FfdcP
+        RawaBuFjiiX4HWYNIDqgeij1VwBqP571JoUg5TqomDSR+aYIFuxgwXgznABttCS0MYQaszCkIG222P6A
+        7QraVsvttt5uCy4OzxqBQwgAIfkEBQgAGgAsAAAAAK0ACwAABf+gJmZiqWGmdl2piJYrm2IvfNUurrYn
+        zsomWgoY1BFLQlivZTzNjLqljSfZlSSSisnh0GhLEwqlK2p0KWAJZULWmDXo62RiesdL6zZXfZXM6w5h
+        Jn50JW+FGlgUEmQNDQ9/IhEaE4xlZoImi4ZcmYlqk2UODxRfVylcEQ0lCAgMERAlDw8QDCUHrhEPJaMR
+        tiIJB6+xIqMQC6yuEMQavcgiuMO8s88arQ3MzQ7H0NEQuyKzEArJDbC8y9XX2dvj0AgJ2MRmy+QirQ66
+        KRVVZQwPDQyIIEDAgKMSth4sEKiBoME2Cxg4YMDQoYNVIhYscFDNYYNfGhhIXFCgRIEDby7/cSxB8ABA
+        hI/sNSRwoE3ImCVFFEBwsUTEBzJbvrz0IAHLnT01KGBgJkHOAgR4aniG8c6CpQ4YahgwIEGbBEsplhhA
+        IN4zsCK1clWAUWkCpjm3dm3wTAFbBnHJsn121ZFaAs1KKFjwMS+BvSIG041LkLBPwnhFcAXcViNdwJJL
+        grS7+ChTn78QDXaAgCXNj3XdlJZckEE1cg0QDJA8oKbg0Qcwt3QNusEBEwXbTlVAmuUAnq8JayVwnHdG
+        pqu3Rl2ZWKLauSaWBhwb1flgpr8HlqWulAGRvgxmyy0QsVp7zNJFCiasAD6BAvIT07fP3vnUBvWpNwB+
+        myE2FoHzNZCA/4AD5qcUYQnAN+BHPjUj0wACFPCRPbAZJVmG/il24QAGkEeOA0DQxdRfCNClX0TXmZUY
+        VgXMRtBhbdklEmNlMSCTRpHNNABbt8Fl2lImtMfQZDJWt4B6chGZ0V2GIZlRezlhOFuOVHKXn0YGltFM
+        hCwZlKMbHq430WOxCUAbSnVF5BtmZKEEEjIMpMmcQUkSFl2d3smZ25suPufbWLXlKGdexwkXEQODMidA
+        izKx5UB40nmVYANxubGYevdZqVSXrEnEZnq0aZYgSQe6ESeAhn12JYACFhRSkrCOJVChEZHHlaqzktkQ
+        iQfVkWaNGlYmkQIMGrTZmDKJsEIKFvAwbS0JFlRrQrXXipCttUR820K3GlhgircqhKvtEOqCu20L3FK7
+        rgnkisvuu9Z+EQIAIfkEBQgAGgAsAAAAAK0ACwAABf+gJmJiOZLmZZYYWqrr1cauKMfwWtuaq+6Xnw63
+        0txSRxMw91oWe8TVZKKplCISiqTUcDgmlJIkuxU1ulQxmdt4TNWUCNtBCYu2FQj7oRVr4g5mbW8mcXsr
+        WxR6ghAUaWNgixpnD4h/khoOjSYSYIGCERYmERBYkg4PDwolCAgPEZWZmhAJrAkNp5qqrAgOsCJeqasa
+        B62+JV4QDwi2misQDsMaCLWxwMq1xNTOZpoOzCLbkg+oDtnFCQ/j3tmtCq/I7CLFq2Ui0JgMDOYlBASu
+        DEowaJNNA4ECCRwEFBHQXAERBf4pLLGgCziDBBKa0PftoYYCBRR80qBv38WIGgX/tjnQL+RIBhU7YgzZ
+        wMSCgSxF+Hu3sY2BEiD3CRzYIKfBAgu8vAg0UoGCBgsIlBhAYGAJp1BNDHi4MEECBQwUeDyq7+otaRq2
+        NliowWlYqWkJGCgrwm0CuAOorqX49GLeAjDrrmogVgTVuQv4Mij4d6KIxPx0EjiQ9XHffgMoszXyS3DS
+        sQQG3LI5sIAAyQg2g2UAWnRNzw1AEwCbWMOC1R7zzq58G+bYvE9NPG1wGuPswLafMvgpObhg3zqpWrW8
+        doBhqpMEP10A+uHrthYwULDmNLLBAQa+257kdzLdthUvhk5vM6nRvJRr244/dXLl5A34JcABjjll32mh
+        ZbbX/2P8iSDAZI7t5wBzaQ3QS21uTVhcXqnpl0BF92VUoALhCaecdTpxRZoCcIUmFVu3QfVbVWwpUJF+
+        AzxYkXAN3CXZi3wRhteD7w3GooMPknTVJD4aBhiMIjUpgAAFLLieOXClhRSM8Q1ZpX5oWVbaVBZW5lZR
+        0f3zH1gTosjhSL3FZl1eoqmmz32uCTdQlnmllNxNv9W5UG8LULhTU8NlKcAAziUHnQYBUJUAl2sFmlSQ
+        VlCUSUHzTdcWWE3mONd3CySVgJtyIXclp6mSOlBBGlCp3k0O4ElgjTiRqZmmAU4lAAKz2ofZhVfdRCF+
+        Vg5mlD9+2sjAA/a8sEIFmcYwbSe1KZhA7RNGTMttENpiK20J2z7BRBXfhmvuueKOS2665LargQVbhAAA
+        IfkEBQgAGgAsAAAAAK0ACwAABf+gJmrXaJ5iia6q2brohcXrfL6jDesin9Y0lI8UG+J6K1REgppQIqYG
+        pFmBmiCUk4QCcYwaD81ktJxMv+eRZFJJa6TZEyX8jVTGorXZ5MBq21ERcXlidCJSeCJLc18NdiZrFF4j
+        DoMiD1IRhl4OCiYJD24OmgkjCKVuoQ6lIgcJk5RdrBoHCBCiEIYaCAqhJqqzrhpuww4Ipqh8EA0mB726
+        fQ3BvaIRDcetntDL2AcHC8QLDA+wGgzXJgQJEAwj5w8HIwQFCuULDQ7xI/QO7V/56XqZWKABnrwCC+w1
+        aKBPwwCED/yZcwBw3wJd7coRMHDvhIMGBtIlNHHOQUgR8xj/2DNX4KBEEQwSLBzYQAGBEQJaMhORoJ6n
+        EQNCLvjZU9pNEUHNmVAgzUTQBhJ7rjrq0ADUEUVnaRBg9WVCbCgPNCAoQoECBgiODhgglqyGBF+psu03
+        QsE9sA4R7OQprmHeq+4YvEwguCVQpgMFyyVwdqmGBYZRdqwr2CFSApPLjpWL8CVTyCI9Px4AtKXnmpGD
+        Vq5bk/ObpZ04CyabNZ2Bcy7C7NVQz6+AA+XMgUx3zK1dhk4RBFd5gDRSmcaZqyWg1+1EvwNeRXdQQABQ
+        vUsFG5heb+m9yA5HUm4QWUB2z+KBMt5NgsnS1qWVjriXwPnNkF7V5FQBgJU1FVI5rSZCxkJaBbWAdUz9
+        JEJOBT5mjFMA0qTVRhXWgxdXdJWVkG9imXeNXF0lsd5JKGm3X2HyyRTecPLU4xZhDFAlwHw0MVCAcxrw
+        SJmPOA2Q2SEL6IjZbveAJk+TQ5oQwJI0SehQZ3VF2F4BCvK2wjgNxuMVA9j5xdtX6QBn3IgxhggTct9V
+        OA52yiXGHnEVvsFikDLWldCe2Y1VF0s4qYPCOegxVk49VtygoqOPjoBDBUlMGumllrJwAqWamsBpECN8
+        CmmolW6KAqchAAAh+QQJCAAaACwAAAAArQALAAAF/6Amitc1jhh2auWqperYruk6n/V54zFp0j2fKyf7
+        8WyX4Eu5ExFJrqUuCnlIKCPJZEKBjByOSCWrpTxGjYZmnN2eGmHK5CQ/i8ARrEjCN6PVehpbWw5oYSd8
+        hF+FgRpaE4UicBqBc3KRGpMrj28OXGRyJw9eJwwKDFVfGhANCSIICAsQpBoPDhAMI7ALEaRgq7mvsal3
+        wAgiB8N2mbfBGskMEYujCyPJsna2q9WvB9EnDg8R3BqwqODUx88IqMvhEOTm0l+jCroKEPPIB5poDAYj
+        CBTQgIlBgwcNAGogQMCAwREMGDhgMFBEAYANgi0wSDGggTQQFzhQ47HfRgcLKv8yBFhQYsqSJDVsfOCs
+        AAF+JDcSfCniZr+IKE/cHDmimgN7PQsgCGetQIKgIk41OCBigFUEDcidckC16oCnSBNINUDAa4IGSDWM
+        Dfg1pliJChcSUAD1bUcNVgmcPZHAYFyGdPn6DTg3poJTd/EWHnE4TUW5CwwjPjFgsYgFBhw6UxA5LcMC
+        GRmLVDDAq2YRYhW0Ktvz4+bIripbBb2ZoKuePkeIzYSA9cLTl22XVmxgomiuhPlpjdxV7sflyL0ewCSW
+        +Qir3sgxOBBZa8bHVgNHFdkA/NyIUU9hvl5WcsTHBErHXBD57mwNDLjRzw9/4OvQAlRFQH6MqUbObA+N
+        18r/cIqhpyBpIgggwID/KcAags5kUo0zRnUV3wD8bCZRc9gRqBZnU7GlXFGRKSQbP6IZ1Fx87Jyw3wFl
+        ySaeguC1VeBgPX0FlUwbVVSZAHull4ZvViWp1kb/RBheViNUsIA2l3V3XWUOEonWcBgelxZeoBk2GnsA
+        cSjSbcR1iSKb8RU3H0EIBIjXAK6lRyd7IXJjTwO9mRZaVCPySSWhgKo4qAgRYHIZkBoI4GNR37F31mZp
+        /DWXcU8a5BtDkbFYaVKnFDgqmQSJltGnBGyUU33gFcCRkgswOaCZQ96npilMynpoFEWcUAEbSAg7hhFC
+        VEmsDsgOG8UOzroA7bLBKvtsDbPHFmuttNhea2wUIQAAOw==
+</value>
+  </data>
   <metadata name="bw.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>535, 133</value>
   </metadata>
