--- a/DPS_Diablo3/Properties/Resources.resx
+++ b/DPS_Diablo3/Properties/Resources.resx
@@ -124,4 +124,10 @@
   <data name="loading_bar" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\loading_bar.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="strelka_close" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\2_strelka_close.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="strelka_open" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\2_strelka_up.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
