--- a/DPS_Diablo3/Properties/Resources.resx
+++ b/DPS_Diablo3/Properties/Resources.resx
@@ -142,4 +142,16 @@
   <data name="strelka_right" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\strelka_right.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="unique_gem_001_x1_demonhunter_male" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\unique_gem_001_x1_demonhunter_male.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="unique_gem_002_x1_demonhunter_male" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\unique_gem_002_x1_demonhunter_male.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="unique_gem_010_x1_demonhunter_male" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\unique_gem_010_x1_demonhunter_male.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="unique_gem_012_x1_demonhunter_male" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\unique_gem_012_x1_demonhunter_male.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
